# htensorizer

./: CHANGELOG.md  LICENSE  README.md  htensorizer.cabal
exe/: Main.hs
exe-test/: Main.hs
src/: HTensorizer.hs
src/HTensorizer/: HaskellInterpreter.hs  TensorProgram.hs  TensorProgramOptimizations.hs  Test.hs  Types.hs
