cabal-version:      2.4
name:               htensorizer
version:            0.1.0.0
author:             Mikko Juola
maintainer:         mikjuo@gmail.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HTensorizer
    hs-source-dirs:   src
    build-depends:    base >=4.9 && <5.0, mtl, transformers, containers
    ghc-options:      -Wall -fno-warn-name-shadowing
    default-language: Haskell2010

executable htensorizer
    main-is:          Main.hs
    build-depends:    base >=4.9 && <5.0,
                      htensorizer
    hs-source-dirs:   exe
    ghc-options:      -Wall -fno-warn-name-shadowing
    default-language: Haskell2010
