cabal-version:      2.4
name:               htensorizer
version:            0.1.0.0
author:             Mikko Juola
maintainer:         mikjuo@gmail.com
extra-source-files: CHANGELOG.md

library
    exposed-modules:  HTensorizer.TensorProgram
                      HTensorizer.TensorProgramOptimizations
                      HTensorizer.Test
                      HTensorizer.Types
    hs-source-dirs:   src
    build-depends:    base >=4.9 && <5.0,
                      containers,
                      mtl,
                      QuickCheck,
                      transformers
    ghc-options:      -Wall -fno-warn-name-shadowing
    default-language: Haskell2010

test-suite htensorizer-test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:    base >=4.9 && <5.0,
                      hspec,
                      htensorizer,
                      QuickCheck
    hs-source-dirs:   exe-test
    ghc-options:      -Wall -fno-warn-name-shadowing
    default-language: Haskell2010

executable htensorizer
    main-is:          Main.hs
    build-depends:    base >=4.9 && <5.0,
                      htensorizer
    hs-source-dirs:   exe
    ghc-options:      -Wall -fno-warn-name-shadowing
    default-language: Haskell2010
